# service/api/do-login.go
@@ -17,7 +17,14 @@ type loginResponse struct {
 }
 
 func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	username := r.URL.Query().Get("user-name")
+	var username string
+	err := json.NewDecoder(r.Body).Decode(&username)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		ctx.Logger.WithError(err).Error("can't decode user-name")
+		return
+	}
+
 	check, err := regexp.Match("^.{4,32}$", []byte(username))
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
